<resources>
    <string name="app_name">Trendition</string>
    <string name="mobile">Mobile</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="empty_mobile">Mobile cannot be empty</string>
    <string name="empty_password">Password cannot be empty</string>
    <string name="incorrect_credentials">Incorrect login credentials</string>
    <string name="transition_detail" translatable="false">transition_%1$d</string>
    <string name="home">Home</string>
    <string name="fabrics">Fabrics</string>
    <string name="dashboard">Dashboard</string>
    <string name="pending">Pending</string>
    <string name="new_product">New Product</string>
    <string name="empty" />
    <string name="notification">Notification</string>
    <string name="cart">Cart</string>
    <string name="likes">Likes</string>
    <string name="uploads">Uploads</string>
    <string name="visits">Visits</string>
    <string name="profile">Profile</string>
    <string name="show_more">Show more</string>
    <string name="show_less">Show less</string>
    <string name="products">Products</string>
    <string name="about">About</string>
    <string name="form_title">Product\nDetails</string>
    <string name="product_name">Title</string>
    <string name="stitching_time">Time</string>
    <string name="product_description">Description</string>
    <string name="category">Category</string>
    <string name="cloth_type">Cloth</string>
    <string name="fabric_type">Fabric</string>
    <string name="occasion_type">Occasion</string>
    <string name="price_range">Price range</string>
    <string name="submit">Submit</string>
    <string name="new_product_image_desc">You can upload at most 5 images. Make sure to capture all the sides for best experience.</string>
    <string name="empty_start_price">Start price cannot be empty</string>
    <string name="empty_end_price">End price cannot be empty</string>
    <string name="choose_a_color">Pick a color for your product</string>
    <string name="min_image_upload_error">You must upload first 2 images</string>
    <string name="product_submitted_successfully">Success! You can now check pending status.</string>
    <string name="some_error_occured">Some error occurred</string>
    <string name="retry">Retry</string>
    <string name="select_image">Select Image</string>
    <string-array name="store_categories">
        <item>Fabric</item>
        <item>Dress Material</item>
        <item>Clothing</item>
        <item>Jewellery</item>
    </string-array>
    <string-array name="store_dress_materials_set_piece">
        <item>Top</item>
        <item>Top &amp; Dupatta</item>
        <item>Suit set</item>
    </string-array>
    <string-array name="gender_array">
        <item>Men</item>
        <item>Women</item>
        <item>Unisex</item>
    </string-array>
    <string-array name="store_fabrics_design_array">
        <item>Ajrakh</item>
        <item>Apatani</item>
        <item>Bagh Print</item>
        <item>Bandhani</item>
        <item>Benaras</item>
        <item>Berhampuri</item>
        <item>Bhagalpuri</item>
        <item>Blockprint</item>
        <item>Bomkai</item>
        <item>Brocade</item>
        <item>Chanderi</item>
        <item>Chikankari</item>
        <item>Cotton</item>
        <item>Dabu</item>
        <item>Embroidery</item>
        <item>Eri</item>
        <item>Ikat Pochampally</item>
        <item>Ikat Sambalpuri</item>
        <item>Jamdani</item>
        <item>Kalamkari</item>
        <item>Kanchi</item>
        <item>Kanjeevaram</item>
        <item>Kantha</item>
        <item>Kasavu</item>
        <item>Khandua</item>
        <item>Kosa</item>
        <item>Kuchai</item>
        <item>Kullu Shawls</item>
        <item>Kunbi</item>
        <item>Lepcha</item>
        <item>Mangalgiri</item>
        <item>Muga</item>
        <item>Mysore</item>
        <item>Naga Shawls</item>
        <item>Narayanpeth</item>
        <item>Nuapatna Khandua</item>
        <item>Pachra</item>
        <item>Paithani</item>
        <item>Panchachuli</item>
        <item>Panja Weaves</item>
        <item>Pasapali</item>
        <item>Pashmina</item>
        <item>Patola</item>
        <item>Phanek</item>
        <item>Phulkari</item>
        <item>Puans</item>
        <item>Raw Silk</item>
        <item>Shisha</item>
    </string-array>
    <string-array name="boutique_category_type_array">
        <item>Churidar</item>
        <item>Dresses</item>
        <item>Kurtas</item>
        <item>Lehenga Choli</item>
        <item>Maggam</item>
    </string-array>
    <string-array name="store_fabrics_cloth_array">
        <item>Georgette</item>
        <item>Velvet</item>
        <item>Chiffon</item>
        <item>Crepe</item>
        <item>Organza</item>
        <item>Taffeta</item>
        <item>Silk</item>
        <item>Wool</item>
        <item>Cotton</item>
        <item>Rayon</item>
        <item>Linen</item>
        <item>Net</item>
        <item>Nylon</item>
        <item>Satin</item>
        <item>Polyester</item>
    </string-array>
    <string-array name="store_fabrics_pattern_array">
        <item>Abstract</item>
        <item>Checks</item>
        <item>Floral</item>
        <item>Geometric</item>
        <item>Paisley</item>
        <item>Objects</item>
        <item>Plain</item>
        <item>Stripes</item>
        <item>Buttons</item>
        <item>Motifs</item>
        <item>Chevron</item>
    </string-array>
    <string-array name="store_jewellery_women_types_array">
        <item>Earings</item>
        <item>Jewellery set</item>
        <item>Necklace &amp; Chains</item>
        <item>Bracelet</item>
        <item>Ring</item>
        <item>Bangle</item>
        <item>Pendant</item>
        <item>Anklet</item>
        <item>Brooch</item>
    </string-array>
    <string-array name="store_jewellery_men_types_array">
        <item>Necklace &amp; Chains</item>
        <item>Bracelet</item>
        <item>Ring</item>
        <item>Pendant</item>
    </string-array>
    <string-array name="store_jewellery_colors_array">
        <item>Gold</item>
        <item>Multicolor</item>
        <item>Silver</item>
        <item>Maroon</item>
        <item>Green</item>
    </string-array>
    <string-array name="store_clothing_women_types_array">
        <item>Churidar</item>
        <item>Dresses</item>
        <item>Dupatta</item>
        <item>Kurtas</item>
        <item>Kurta Sets</item>
        <item>Kurtis</item>
        <item>Lehenga Choli</item>
        <item>Night Suits</item>
        <item>Night Dress</item>
        <item>Sarees</item>
        <item>Shawl/Stoles</item>
    </string-array>
    <string-array name="store_clothing_men_types_array">
        <item>Shirts</item>
        <item>Kurta Sets</item>
        <item>Kurtas</item>
        <item>Jackets</item>
        <item>Sherwani</item>
    </string-array>
    <string-array name="store_clothing_occasion_types_array">
        <item>Casual Wear</item>
        <item>Party Wear</item>
        <item>Wedding/Festive</item>
        <item>Home Wear</item>
        <item>Office Wear</item>
    </string-array>
    <string-array name="login_type_array">
        <item>Boutique</item>
        <item>Store</item>
        <item>Designer</item>
    </string-array>
    <string-array name="product_categories">
        <item>Dress</item>
        <item>Lehenga</item>
    </string-array>
    <string-array name="product_colors">
        <item>Blue</item>
        <item>Red</item>
        <item>Black</item>
    </string-array>
    <string-array name="cloth_types">
        <item>Cotton</item>
        <item>Silk</item>
        <item>Linen</item>
        <item>Nylon</item>
        <item>Rayon</item>
        <item>Wool</item>
    </string-array>
    <string-array name="fabric_types">
        <item>Ikat</item>
        <item>Kalam Kari</item>
        <item>Block Print</item>
        <item>Chanderi</item>
        <item>Banaras</item>
        <item>Madhubani</item>
    </string-array>
    <string-array name="occasion_types">
        <item>Party wear</item>
        <item>Casual wear</item>
        <item>Office wear</item>
    </string-array>
    <string-array name="preparation_time_array">
        <item>5 – 7 days</item>
        <item>7 – 10 days</item>
        <item>10 – 15 days</item>
    </string-array>
    <string name="dupattas">Dupattas</string>
    <string name="sarees">Sarees</string>
    <string name="dresses">Dresses</string>
    <string name="product_price">₹%1$s</string>
    <string name="quantity">Quantity</string>
    <string name="add_to_bag">Add to Bag</string>
    <string name="specifications">Specifications</string>
    <string name="quantity_in_meters">%1$dm</string>
    <string name="quantity_in_units">%1$d units</string>
    <string name="unavailable">Unavailable</string>
    <string name="in_bag">Check your bag</string>
    <string name="bag_at_price">Bag @₹%1$d</string>
    <string name="email">Email</string>
    <string name="place">Place</string>
    <string name="name">Name</string>
    <string name="item_s_total">Item(s) total</string>
    <string name="checkout">Checkout</string>
    <string name="total">Total</string>
    <string name="progress">Progress</string>
    <string name="approved">Approved</string>
    <string name="seller_details">Seller Details</string>
    <string name="live">Live</string>
    <string name="remove">Remove</string>
    <string name="confirm">Confirm</string>
    <string name="dispatch">Dispatch</string>
    <string name="orders">Orders</string>
    <string name="save">Save</string>
    <string name="delivery_time">Delivery time</string>
    <string name="price">Price (₹)</string>
    <string name="price_without_symbol">Price</string>
    <string name="price_cannot_be_zero">Price cannot be empty or zero</string>
    <string name="hint_quantity_in_meters">Quantity (meters)</string>
    <string name="hint_quantity_in_units">Quantity (units)</string>
    <string name="pincode">Pincode</string>
    <string name="flat_no">Flat no.</string>
    <string name="landmark">Landmark</string>
    <string name="town">Town/City</string>
    <string name="state">State</string>
    <string name="flat_no_house_no">Flat/House no.</string>
    <string name="area_street">Area/Street</string>
    <string name="add_a_new_address">Add a new address</string>
    <string name="address">Address</string>
    <string name="cart_items_updated">Cart items have been updated based on the availability. Verify and checkout again.</string>
    <string name="address_description">%1$s, %2$s, %3$s, %4$s, %5$s\n%6$s</string>
    <string name="proceed">Proceed</string>
    <string name="order_id">OrderID - %1$s</string>
    <string name="order_quantity">Quantity - %1$d</string>
    <string name="received">Received</string>
    <string name="confirmed">Confirmed</string>
    <string name="dispatched">Dispatched</string>
    <string name="in_progress">In Progress</string>
    <string name="in_transit">In transit</string>
    <string name="out_for_delivery">Out for delivery</string>
    <string name="delivered">Delivered</string>
    <string name="cancelled">Cancelled</string>
    <string name="completed">Completed</string>
    <string name="thank_you">Thank you</string>
    <string name="order_success_desc">Your order has been placed successfully.</string>
    <string name="order_failed_desc">Some error occurred. You can retry payment.</string>
    <string name="payment_failed">Payment failed</string>
    <string name="view_orders">View Orders</string>
    <string name="back_to_dashboard">Back to Dashboard</string>
    <string name="back_to_cart">Back to Cart</string>
    <string name="order_summary">Order Summary</string>
    <string name="order_total">Order total</string>
    <string name="delivery_charges">Delivery charge</string>
</resources>