<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="isOrderSuccess"
            type="Boolean" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/order_success_illustration"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginHorizontal="@dimen/grid_2"
            android:src="@{ isOrderSuccess ? @drawable/ic_order_success : @drawable/ic_order_fail}"
            app:layout_constraintBottom_toTopOf="@+id/order_success_title"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            tools:srcCompat="@drawable/ic_order_fail" />

        <TextView
            android:id="@+id/order_success_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/grid_2"
            android:layout_marginTop="@dimen/grid_2"
            android:gravity="center"
            android:text="@{isOrderSuccess ? @string/thank_you : @string/payment_failed}"
            android:textAppearance="?textAppearanceHeadline5"
            app:layout_constraintBottom_toTopOf="@+id/order_success_desc"
            app:layout_constraintTop_toBottomOf="@+id/order_success_illustration"
            tools:layout_editor_absoluteX="16dp"
            tools:text="@string/payment_failed" />

        <TextView
            android:id="@+id/order_success_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/grid_2"
            android:layout_marginTop="@dimen/grid_2"
            android:gravity="center"
            android:text="@{isOrderSuccess ? @string/order_success_desc : @string/order_failed_desc}"
            android:textAppearance="?textAppearanceBody2"
            app:layout_constraintBottom_toTopOf="@+id/view_orders_list"
            app:layout_constraintTop_toBottomOf="@+id/order_success_title"
            tools:layout_editor_absoluteX="16dp"
            tools:text="@string/order_failed_desc" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/view_orders_list"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/grid_2"
            android:layout_marginTop="@dimen/grid_3"
            android:text="@string/view_orders"
            android:textColor="?colorOnSecondary"
            android:visibility="@{isOrderSuccess ? View.VISIBLE : View.GONE}"
            app:backgroundTint="?colorSecondary"
            app:layout_constraintBottom_toTopOf="@+id/back_to_dashboard"
            app:layout_constraintTop_toBottomOf="@+id/order_success_desc"
            tools:layout_editor_absoluteX="16dp"
            tools:visibility="gone" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/back_to_dashboard"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/grid_2"
            android:layout_marginTop="@dimen/grid_1"
            android:text="@{isOrderSuccess ? @string/back_to_dashboard : @string/back_to_cart}"
            android:textColor="?colorSecondary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_orders_list"
            app:layout_goneMarginTop="@dimen/grid_3"
            tools:layout_editor_absoluteX="16dp"
            tools:text="@string/back_to_cart" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>