<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/address_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?actionBarSize"
            android:padding="@dimen/grid_2"
            android:visibility="gone"
            tools:visibility="gone">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/address_name_text_input_layout"
                style="@style/Widget.Boutiques.TextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/name"
                    android:textAppearance="?textAppearanceBody2"
                    android:textCursorDrawable="@null" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/address_number_text_input_layout"
                style="@style/Widget.Boutiques.TextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/grid_2"
                app:layout_constraintEnd_toStartOf="@+id/address_pincode_text_input_layout"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/address_name_text_input_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/address_number"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/mobile"
                    android:textAppearance="?textAppearanceBody2"
                    android:textCursorDrawable="@null" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/address_pincode_text_input_layout"
                style="@style/Widget.Boutiques.TextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/grid_2"
                android:layout_marginTop="@dimen/grid_2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/address_number_text_input_layout"
                app:layout_constraintTop_toBottomOf="@+id/address_name_text_input_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/address_pincode"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/pincode"
                    android:textAppearance="?textAppearanceBody2"
                    android:textCursorDrawable="@null" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/address_flat_text_input_layout"
                style="@style/Widget.Boutiques.TextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/grid_2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/address_area_text_input_layout"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/address_number_text_input_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/address_flat_no"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:baselineAligned="false"
                    android:hint="@string/flat_no_house_no"
                    android:textAppearance="?textAppearanceBody2"
                    android:textCursorDrawable="@null" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/address_area_text_input_layout"
                style="@style/Widget.Boutiques.TextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/grid_2"
                android:layout_marginTop="@dimen/grid_2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/address_flat_text_input_layout"
                app:layout_constraintTop_toBottomOf="@+id/address_number_text_input_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/address_area"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/area_street"
                    android:textAppearance="?textAppearanceBody2"
                    android:textCursorDrawable="@null" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/address_town_text_input_layout"
                style="@style/Widget.Boutiques.TextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/grid_2"
                android:layout_marginTop="@dimen/grid_2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@id/address_landmark_text_input_layout"
                app:layout_constraintTop_toBottomOf="@+id/address_flat_text_input_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/address_town"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/town"
                    android:textAppearance="?textAppearanceBody2"
                    android:textCursorDrawable="@null" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/address_state_text_input_layout"
                style="@style/Widget.Boutiques.TextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/grid_2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/address_town_text_input_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/address_state"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/state"
                    android:textAppearance="?textAppearanceBody2"
                    android:textCursorDrawable="@null" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/address_landmark_text_input_layout"
                style="@style/Widget.Boutiques.TextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/grid_2"
                app:layout_constraintEnd_toStartOf="@+id/address_town_text_input_layout"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/address_flat_text_input_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/address_landmark"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/landmark"
                    android:textAppearance="?textAppearanceBody2"
                    android:textCursorDrawable="@null" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/submit_address"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:textColor="?colorSecondary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/address_state_text_input_layout"
                app:rippleColor="?colorSecondaryVariant" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/address_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:paddingTop="120dp"
            android:paddingBottom="88dp"
            android:visibility="gone"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:itemCount="2"
            tools:listitem="@layout/address_item"
            tools:visibility="visible" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/checkout_footer_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="?colorPrimaryVariant"
            app:cardElevation="@dimen/product_description_sticky_card_elevation"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearance="@style/ShapeAppearance.BoutiquesWorld.Footer">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/add_new_address"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="?actionBarSize"
                android:text="@string/add_a_new_address"
                android:textColor="?colorSecondary"
                android:visibility="visible"
                app:backgroundTint="?colorPrimaryVariant"
                app:cornerRadius="0dp"
                app:icon="@drawable/ic_round_add"
                app:iconGravity="textStart"
                app:iconTint="?colorSecondary"
                app:rippleColor="?colorSecondaryVariant" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/proceed_footer_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            app:cardElevation="@dimen/product_description_sticky_card_elevation"
            app:shapeAppearance="@style/ShapeAppearance.BoutiquesWorld.Footer">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/address_proceed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/grid_2"
                android:layout_marginVertical="@dimen/grid_1"
                android:text="@string/proceed"
                android:textAllCaps="false"
                android:textAppearance="?textAppearanceBody2"
                android:textColor="?colorOnSecondary"
                app:backgroundTint="?colorSecondary" />
        </com.google.android.material.card.MaterialCardView>
    </FrameLayout>
</layout>